--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^4.1.0
+  firebase_core: ^2.4.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
