--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
     sdk: flutter
   firebase_auth: ^4.1.0
   firebase_core: ^2.4.0
-  
+  camera: ^0.9.4+9
+  video_player: ^2.2.5
+  path_provider: ^2.0.5
+  permission_handler: ^8.3.0  
 
 
   # The following adds the Cupertino Icons font to your application.
