--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,9 @@ dependencies:
   video_player: ^2.2.5
   path_provider: ^2.0.5
   permission_handler: ^8.3.0  
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_local_notifications: ^9.6.0
+  timezone: ^0.8.0
+  rxdart: ^0.27.4
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
